# id-card-reader

./: .gitignore  pyproject.toml  readme.md
datasets/scripts/: download.py  transform_to_segment.py
models/: yolo.py
