[project]
name = "id-card-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "midv500>=0.2.1",
    "mlflow>=3.1.0",
    "numpy<2",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "torch==2.2.2",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.158",
]
